# transcribe-rs

./: Cargo.toml  README.md
.github/workflows/: test.yml
examples/: analyze_paraformer.rs  gigaam.rs  moonshine_streaming.rs  paraformer.rs  paraformer_punct.rs  punct_infer.rs  punct_test.rs  sense_voice.rs  zipformer_ctc.rs  zipformer_transducer.rs
src/: itn.rs  lib.rs  punct.rs
src/engines/: mod.rs  whisper.rs  zipformer_common.rs
src/engines/gigaam/: engine.rs  mod.rs  model.rs
src/engines/moonshine/: bin_tokenizer.rs  feedback.md  mod.rs  model.rs  streaming_config.rs  streaming_engine.rs  streaming_model.rs  streaming_state.rs  tokenizer.rs
src/engines/paraformer/: engine.rs  features.rs  mod.rs  model.rs  tokens.rs
src/engines/parakeet/: model.rs
src/engines/sense_voice/: decoder.rs  engine.rs  features.rs  mod.rs  model.rs  tokens.rs
src/engines/zipformer_ctc/: engine.rs  mod.rs  model.rs
src/engines/zipformer_transducer/: engine.rs  mod.rs  model.rs
tests/: gigaam.rs  sense_voice.rs  whisper.rs
