[package]
name = "transcribe-rs"
version = "0.2.6"
edition = "2021"
description = "A simple library to help you transcribe audio"
license = "MIT"
repository = "https://github.com/cjpais/transcribe-rs"

[features]
default = []

# Local engines
whisper = ["dep:whisper-rs", "dep:advapi32-sys"]
parakeet = ["dep:ort", "dep:ndarray", "dep:regex", "dep:once_cell"]
moonshine = ["dep:ort", "dep:ndarray"]
sense_voice = ["dep:ort", "dep:ndarray", "dep:rustfft", "dep:base64"]
whisperfile = ["dep:ureq"]

# Remote engines
openai = ["dep:async-openai", "dep:tokio", "dep:async-trait"]

# Post-processing
itn = ["dep:nemo-text-processing"]

# Convenience
all = ["whisper", "parakeet", "moonshine", "sense_voice", "whisperfile", "openai", "itn"]

[dependencies]
# Always required
hound = "3.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.28"
env_logger = "0.10.0"
thiserror = "2.0.16"
derive_builder = { version = "0.20.2" }

# Parakeet & Moonshine (ONNX-based)
ort = { version = "2.0.0-rc.10", optional = true }
ndarray = { version = "0.16.1", optional = true }

# Parakeet only
regex = { version = "1.11.2", optional = true }
once_cell = { version = "1.21.3", optional = true }

# SenseVoice (FBANK feature extraction)
rustfft = { version = "6", optional = true }
base64 = { version = "0.22", optional = true }

# Whisperfile
ureq = { version = "3", optional = true }

# ITN (Inverse Text Normalization)
nemo-text-processing = { git = "https://github.com/FluidInference/text-processing-rs", optional = true }

# OpenAI
tokio = { version = "1.47.1", features = ["rt-multi-thread"], optional = true }
async-openai = { version = "0.29.3", optional = true }
async-trait = { version = "0.1.89", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["metal"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
advapi32-sys = { version = "0.2.0", optional = true }
whisper-rs = { version = "0.13.2", features = ["vulkan"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["vulkan"], optional = true }

# Examples with required features
[[example]]
name = "parakeet"
required-features = ["parakeet"]

[[example]]
name = "whisper"
required-features = ["whisper"]

[[example]]
name = "moonshine"
required-features = ["moonshine"]

[[example]]
name = "moonshine_streaming"
required-features = ["moonshine"]

[[example]]
name = "sense_voice"
required-features = ["sense_voice"]

[[example]]
name = "whisperfile"
required-features = ["whisperfile"]

[[example]]
name = "openai"
required-features = ["openai"]

[dev-dependencies]
once_cell = "1.21.3"

# Tests with required features
[[test]]
name = "parakeet"
required-features = ["parakeet"]

[[test]]
name = "whisper"
required-features = ["whisper"]

[[test]]
name = "moonshine"
required-features = ["moonshine"]

[[test]]
name = "sense_voice"
required-features = ["sense_voice"]

[[test]]
name = "whisperfile"
required-features = ["whisperfile"]

[[test]]
name = "openai"
required-features = ["openai"]
